[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"
hex = "0.4.3"
which = "8.0.0"
dirs = "6.0.0"
walkdir = "2.5.0"
ctrlc = "3.5.0"
fs2 = "0.4.3"
isatty = "0.1.9"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.15"
httpdate = "1.0.3"
tempfile = "3.22.0"
chrono = "0.4.42"
bitnet-models = { path = "../crates/bitnet-models", default-features = false }
bitnet-kernels = { path = "../crates/bitnet-kernels", default-features = false, features = ["cpu"] }
bitnet-common = { path = "../crates/bitnet-common", default-features = false }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", default-features = false, features = ["spm"] }
bitnet-inference = { path = "../crates/bitnet-inference", default-features = false, optional = true }
bitnet = { path = "..", default-features = false, features = ["cpu"], optional = true }
tokio = { version = "1.47.1", features = ["rt"], optional = true }
futures = { version = "0.3.31", optional = true }

[features]
default = ["gpu"]
inference = ["dep:bitnet-inference", "dep:bitnet", "dep:tokio", "dep:futures"]
gpu = ["bitnet-kernels/gpu"]

[dev-dependencies]
tiny_http = "0.12.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"
