[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { workspace = true, features = ["derive"] }
console = "0.16.1"
indicatif = "0.18.3"
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"
hex = "0.4.3"
which = "8.0.0"
dirs = "6.0.0"
walkdir = "2.5.0"
ctrlc = "3.5.1"
fs2 = "0.4.3"
is-terminal = "0.4.17"
serde.workspace = true
serde_json.workspace = true
toml = "0.9.8"
httpdate = "1.0.3"
tempfile = "3.23.0"
chrono = "0.4.42"
bitnet-models = { path = "../crates/bitnet-models", default-features = false, features = ["cpu"] }
bitnet-kernels = { path = "../crates/bitnet-kernels", default-features = false, features = ["cpu"] }
bitnet-common = { path = "../crates/bitnet-common", default-features = false }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", default-features = false, features = ["spm"] }
bitnet-inference = { path = "../crates/bitnet-inference", default-features = false, optional = true }
bitnet = { path = "..", default-features = false, features = ["cpu"], optional = true }
tokio = { version = "1.48.0", features = ["rt"], optional = true }
futures = { version = "0.3.31", optional = true }
regex = "1.12.2"
xtask-build-helper = { path = "../xtask-build-helper" }
bitnet-crossval = { path = "../crossval", default-features = false, optional = true }
bitnet-sys = { path = "../crates/bitnet-sys", default-features = false, optional = true }
scopeguard = "1.2.0"
thiserror = "2.0.17"

[features]
default = ["gpu"]
inference = ["dep:bitnet-inference", "dep:bitnet", "dep:tokio", "dep:futures", "dep:bitnet-crossval"]
crossval = ["dep:bitnet-crossval", "bitnet-crossval/llama-ffi"]
ffi = ["dep:bitnet-sys", "bitnet-sys/ffi", "dep:bitnet-crossval", "bitnet-crossval/ffi", "bitnet-crossval/llama-ffi"]
crossval-all = ["inference", "crossval", "ffi"]
gpu = ["bitnet-kernels/gpu"]

[dev-dependencies]
tiny_http = "0.12.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
serial_test = "3.2.0"
temp-env = "0.3.6"
bitnet-test-support = { path = "../crates/bitnet-test-support" }
