[package]
name = "bitnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for BitNet inference"

[lib]
name = "bitnet_cli"
path = "src/lib.rs"

[[bin]]
name = "bitnet"
path = "src/main.rs"

[dependencies]
bitnet-common = { path = "../bitnet-common" }
bitnet-models = { path = "../bitnet-models" }
bitnet-inference = { path = "../bitnet-inference" }
bitnet-quantization = { path = "../bitnet-quantization" }
bitnet-tokenizers = { path = "../bitnet-tokenizers" }
bitnet-ggml-ffi = { path = "../bitnet-ggml-ffi", optional = true }
candle-core.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "color"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
indicatif = { workspace = true, features = ["tokio"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
toml.workspace = true
regex = "1"
once_cell = "1.21.3"
console.workspace = true
humantime.workspace = true
humansize.workspace = true
crossterm.workspace = true
clap_complete.workspace = true
num_cpus.workspace = true
dirs.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
memmap2.workspace = true
sha2 = "0.10"
bytemuck = "1.19.0"
half = "2.4.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3"

[features]
default = ["cpu", "full-cli"]
cpu = ["bitnet-inference/cpu"]
gpu = ["bitnet-inference/gpu"]
cuda = ["gpu"]  # Backward compatibility alias for gpu
# IQ2_S support via GGML FFI
iq2s-ffi = ["bitnet-models/iq2s-ffi", "bitnet-ggml-ffi/iq2s-ffi"]
# Cross-validation support
crossval = []
# Gate benchmark subcommand behind feature flag
cli-bench = []
# build the extra subcommands only when you want them
full-cli = ["cli-bench"]
