[package]
name = "bitnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for BitNet inference"
include = [
  "src/**",
  "Cargo.toml",
]

[lib]
name = "bitnet_cli"
path = "src/lib.rs"

[[bin]]
name = "bitnet"
path = "src/main.rs"

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.1.0" }
bitnet-models = { path = "../bitnet-models", version = "0.1.0" }
bitnet-inference = { path = "../bitnet-inference", version = "0.1.0" }
bitnet-quantization = { path = "../bitnet-quantization", version = "0.1.0" }
bitnet-tokenizers = { path = "../bitnet-tokenizers", version = "0.1.0" }
bitnet-runtime-bootstrap = { path = "../bitnet-runtime-bootstrap", version = "0.1.0" }
bitnet-startup-contract-guard = { path = "../bitnet-startup-contract-guard", version = "0.1.0" }
bitnet-ggml-ffi = { path = "../bitnet-ggml-ffi", version = "0.1.0", optional = true }
candle-core.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "color"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
indicatif = { workspace = true, features = ["tokio"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
toml.workspace = true
regex = "1.12.2"
console.workspace = true
humantime.workspace = true
humansize.workspace = true
crossterm.workspace = true
clap_complete.workspace = true
num_cpus.workspace = true
dirs.workspace = true
chrono = { workspace = true, features = ["serde"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
memmap2.workspace = true
sha2 = "0.10.9"
bytemuck = "1.24.0"
half = "2.7.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
serial_test = "3.2.0"

[features]
default = ["cpu", "full-cli"]
runtime-profile-core = [
  "bitnet-runtime-bootstrap/runtime-profile-inference",
  "bitnet-runtime-bootstrap/runtime-profile-kernels",
  "bitnet-runtime-bootstrap/runtime-profile-tokenizers",
  "bitnet-runtime-bootstrap/runtime-profile-quantization",
]
cpu = [
  "bitnet-inference/cpu",
  "runtime-profile-core",
  "bitnet-runtime-bootstrap/runtime-profile-cpu",
]
gpu = [
  "bitnet-inference/gpu",
  "runtime-profile-core",
  "bitnet-runtime-bootstrap/runtime-profile-gpu",
]
cuda = ["gpu", "bitnet-runtime-bootstrap/runtime-profile-cuda"]  # Backward compatibility alias for gpu
# IQ2_S support via GGML FFI
iq2s-ffi = [
    "bitnet-models/iq2s-ffi",
    "bitnet-ggml-ffi/iq2s-ffi",
    "bitnet-runtime-bootstrap/runtime-profile-iq2s-ffi",
]
# Cross-validation support
crossval = ["bitnet-runtime-bootstrap/runtime-profile-crossval"]
# Gate benchmark subcommand behind feature flag
cli-bench = []
# build the extra subcommands only when you want them
full-cli = ["cli-bench", "runtime-profile-core", "bitnet-runtime-bootstrap/runtime-profile-cli"]
trace = ["bitnet-inference/trace", "bitnet-runtime-bootstrap/runtime-profile-trace"]  # Enable tensor activation tracing
# Mock feature - compile-time firewall (intentionally triggers compile_error! in main.rs)
# This prevents production CLI builds with test mocks
# DO NOT enable this feature - it will fail to compile by design
mock = []
