[package]
name = "bitnet-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Common types, traits, and utilities for BitNet inference"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
bytemuck.workspace = true
candle-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true
serde_json.workspace = true

[features]
default = []
# Enable GPU backends explicitly; keep them independent so callers can choose.
gpu = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
