[package]
name = "bitnet-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Common types, traits, and utilities for BitNet inference"
include = [
  "src/**",
  "Cargo.toml",
  "WARN_ONCE_README.md",
]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
bytemuck.workspace = true
candle-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true
serde_json.workspace = true
serial_test.workspace = true
temp-env.workspace = true
tracing-subscriber.workspace = true
bitnet-test-support.workspace = true

[features]
integration-tests = []
default = []
cpu = []
cuda = ["candle-core/cuda"]
gpu = ["cuda"]  # GPU umbrella — CUDA is the current implementation
# Do NOT enable Candle's Metal feature on non-Apple hosts.
# We keep a local "metal" feature for code cfgs, but wire Candle's "metal"
# only on macOS via a target-specific dependency (see below).
metal = []
test-util = []  # Exposes test-only APIs for integration tests

[target.'cfg(target_os = "macos")'.dependencies.candle-core]
# This augments the base candle-core dependency by adding the "metal" feature
# ONLY on macOS, so Linux builds won't try to compile objc/Metal frameworks.
workspace = true
features = ["metal"]
