[package]
name = "bitnet-compat"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors = ["BitNet Contributors"]
description = "Compatibility layer for drop-in llama.cpp replacement"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bitnet-common = { path = "../bitnet-common" }
bitnet-models = { path = "../bitnet-models" }
bitnet-tokenizers = { path = "../bitnet-tokenizers", optional = true }
anyhow = "1.0.100"
tracing = "0.1.41"
serde_json = "1.0.145"
chrono = "0.4.42"
ggus = "0.5.1"
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"

[features]
integration-tests = []
tokenizer-probe = ["bitnet-tokenizers"]
