[package]
name = "bitnet-device-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Device detection and capability probing for BitNet inference"
rust-version.workspace = true

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.1-dev" }
log.workspace = true
ash = { version = "0.38.0", optional = true }

[dev-dependencies]
temp-env.workspace = true
serial_test.workspace = true
insta = { workspace = true }
proptest.workspace = true

[features]
default = []
cpu = []
gpu = ["cuda", "rocm"]
cuda = []
rocm = []
vulkan = ["dep:ash"]
npu = ["oneapi"]
oneapi = []

[lints]
workspace = true
