[package]
name = "bitnet-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Orchestration contracts and session types for BitNet inference engines"
rust-version.workspace = true

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.1-dev" }
bitnet-generation = { path = "../bitnet-generation", version = "0.2.1-dev" }
anyhow.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
insta = { workspace = true }

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []

[lints]
workspace = true
