[package]
name = "bitnet-feature-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compact feature and BDD profile contracts for BitNet tooling"
include = ["src/**", "Cargo.toml"]

[dependencies]
bitnet-bdd-grid = { path = "../bitnet-bdd-grid", version = "0.1.0" }
bitnet-feature-matrix = { path = "../bitnet-feature-matrix", version = "0.1.0" }

[features]
default = []
cpu = ["bitnet-feature-matrix/cpu"]
gpu = ["bitnet-feature-matrix/gpu"]
cuda = ["bitnet-feature-matrix/cuda"]
inference = ["bitnet-feature-matrix/inference"]
kernels = ["bitnet-feature-matrix/kernels"]
tokenizers = ["bitnet-feature-matrix/tokenizers"]
quantization = ["bitnet-feature-matrix/quantization"]
cli = ["bitnet-feature-matrix/cli"]
server = ["bitnet-feature-matrix/server"]
ffi = ["bitnet-feature-matrix/ffi"]
python = ["bitnet-feature-matrix/python"]
wasm = ["bitnet-feature-matrix/wasm"]
crossval = ["bitnet-feature-matrix/crossval"]
trace = ["bitnet-feature-matrix/trace"]
iq2s-ffi = ["bitnet-feature-matrix/iq2s-ffi"]
cpp-ffi = ["bitnet-feature-matrix/cpp-ffi"]
fixtures = ["bitnet-feature-matrix/fixtures"]
reporting = ["bitnet-feature-matrix/reporting"]
trend = ["bitnet-feature-matrix/trend"]
integration-tests = ["bitnet-feature-matrix/integration-tests"]
runtime-profile-cpu = ["bitnet-feature-matrix/runtime-profile-cpu"]
runtime-profile-gpu = ["bitnet-feature-matrix/runtime-profile-gpu"]
runtime-profile-cuda = ["bitnet-feature-matrix/runtime-profile-cuda"]
runtime-profile-inference = ["bitnet-feature-matrix/runtime-profile-inference"]
runtime-profile-kernels = ["bitnet-feature-matrix/runtime-profile-kernels"]
runtime-profile-tokenizers = ["bitnet-feature-matrix/runtime-profile-tokenizers"]
runtime-profile-quantization = ["bitnet-feature-matrix/runtime-profile-quantization"]
runtime-profile-cli = ["bitnet-feature-matrix/runtime-profile-cli"]
runtime-profile-server = ["bitnet-feature-matrix/runtime-profile-server"]
runtime-profile-ffi = ["bitnet-feature-matrix/runtime-profile-ffi"]
runtime-profile-python = ["bitnet-feature-matrix/runtime-profile-python"]
runtime-profile-wasm = ["bitnet-feature-matrix/runtime-profile-wasm"]
runtime-profile-crossval = ["bitnet-feature-matrix/runtime-profile-crossval"]
runtime-profile-trace = ["bitnet-feature-matrix/runtime-profile-trace"]
runtime-profile-iq2s-ffi = ["bitnet-feature-matrix/runtime-profile-iq2s-ffi"]
runtime-profile-cpp-ffi = ["bitnet-feature-matrix/runtime-profile-cpp-ffi"]
runtime-profile-fixtures = ["bitnet-feature-matrix/runtime-profile-fixtures"]
runtime-profile-reporting = ["bitnet-feature-matrix/runtime-profile-reporting"]
runtime-profile-trend = ["bitnet-feature-matrix/runtime-profile-trend"]
runtime-profile-integration-tests = ["bitnet-feature-matrix/runtime-profile-integration-tests"]
