[package]
name = "bitnet-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "C API bindings for BitNet"

[lib]
name = "bitnet_ffi"
# add rlib so integration tests can import the crate by name
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
bitnet-common = { path = "../bitnet-common" }
bitnet-models = { path = "../bitnet-models" }
bitnet-inference = { path = "../bitnet-inference" }
bitnet-tokenizers = { path = "../bitnet-tokenizers" }
bitnet-compat = { path = "../bitnet-compat" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num_cpus = "1.16"
candle-core.workspace = true
futures.workspace = true
log = "0.4"

# Optional CUDA support
cudarc = { workspace = true, optional = true }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
tempfile.workspace = true

[features]
integration-tests = []
default = ["cpu"]
cpu = []
gpu = ["cudarc", "bitnet-inference/gpu"]
cuda = ["gpu"]  # Alias for backward compatibility
ffi-tests = []