[package]
name = "bitnet-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "C API bindings for BitNet"

[lib]
name = "bitnet_ffi"
# add rlib so integration tests can import the crate by name
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.0-alpha.1" }
bitnet-models = { path = "../bitnet-models", version = "0.2.0-alpha.1" }
bitnet-inference = { path = "../bitnet-inference", version = "0.2.0-alpha.1" }
bitnet-tokenizers = { path = "../bitnet-tokenizers", version = "0.2.0-alpha.1" }
bitnet-compat = { path = "../bitnet-compat", version = "0.2.0-alpha.1" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num_cpus = "1.17.0"
candle-core.workspace = true
futures.workspace = true
log = "0.4.28"

# Optional CUDA support
cudarc = { workspace = true, optional = true }

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.0-alpha.1" }
tempfile.workspace = true
proptest = { workspace = true }

[features]
integration-tests = []
default = ["cpu"]
cpu = []
cuda = ["cudarc", "bitnet-inference/cuda"]
gpu = ["cuda"]  # GPU umbrella — CUDA is the current implementation
ffi-tests = []
