[package]
name = "bitnet-generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Decode-loop stopping logic and generation event types for BitNet inference"
rust-version.workspace = true

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.0-alpha.1" }
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
insta = { workspace = true }

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []

[lints]
workspace = true
