[package]
name = "bitnet-ggml-ffi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "GGML FFI bindings for BitNet quantization support"
repository = "https://github.com/microsoft/BitNet"

[features]
integration-tests = []
# When enabled, we compile the GGML shim and expose IQ2_S dequantization.
iq2s-ffi = []

[build-dependencies]
cc = "1.2.38"

[dependencies]
libc = "0.2.175"