[package]
name = "bitnet-ggml-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GGML FFI bindings for BitNet quantization support"
readme = "README.md"
include = [
  "src/**",
  "Cargo.toml",
  "build.rs",
  "README.md",
  "csrc/**",
]

[features]
integration-tests = []
# When enabled, we compile the GGML shim and expose IQ2_S dequantization.
iq2s-ffi = ["dep:libc"]

[build-dependencies]
cc = "1.2.38"

[dependencies]
libc = { version = "0.2.175", optional = true }
