[package]
name = "bitnet-gguf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lightweight GGUF file format types and header parser"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
memmap2.workspace = true

[dev-dependencies]
proptest.workspace = true
insta = { workspace = true }

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []

[lints]
workspace = true
