[package]
name = "bitnet-gpu-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GPU hardware abstraction layer with CPU reference implementations for BitNet inference"
rust-version.workspace = true
autobenches = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest.workspace = true

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []
bench = []

[[bench]]
name = "gpu_hal_bench"
harness = false
required-features = ["bench"]

[lints]
workspace = true
