[package]
name = "bitnet-gpu-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GPU hardware abstraction layer with multi-model serving for BitNet inference"
rust-version.workspace = true

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.1-dev" }
log.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
insta = { workspace = true }

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []

[lints]
workspace = true
